# multic

./: CMakeLists.txt  README.md
src/: main.c  multic.c  multic.h
